tests/chainsaw/webservices.idp.rottler.io/assert/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: watermarkflow-backend
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - watermarkflow.k8s.home.rottlr.de
