tests/chainsaw/webservices.idp.rottler.io/assert/service-no-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: watermarkflow-static
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
