tests/chainsaw/webservices.idp.rottler.io/assert/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: watermarkflow-backend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: http
